2012-06-16  Huang Dongsung  <luxtella@company100.net>

        [Texmap] Share gaussian formula between shaders in TextureMapperShaderManager.
        https://bugs.webkit.org/show_bug.cgi?id=89277

        This patch makes blur and drop shadow shader share gaussian formula.

        On the other hand, blur and drop shadow filter computed a gaussian weight in
        pixel shader. However, a gaussian kernal has always same values, so this patch
        computes the gaussian kernel only one time using CPU.
        It is more accurate and faster.

        Reviewed by Noam Rosenthal.

        Covered by existing tests, particularly css3/filters/.

        * platform/graphics/texmap/TextureMapperShaderManager.cpp:
        (WebCore):
        (WebCore::StandardFilterProgram::StandardFilterProgram):
        (WebCore::gauss):
        (WebCore::gaussianKernel):
        (WebCore::StandardFilterProgram::prepare):
        * platform/graphics/texmap/TextureMapperShaderManager.h:

2012-06-16  Robert Kroeger  <rjkroege@chromium.org>

        [chromium] Make the deviceScaleFactor dynamically adjustable.
        https://bugs.webkit.org/show_bug.cgi?id=88916

        Reviewed by James Robinson.

        * platform/graphics/chromium/cc/CCLayerTreeHost.cpp: Removed use of static
        deviceScaleFactor from settings with dyanmic m_deviceScaleFactor
        (WebCore::CCLayerTreeHost::CCLayerTreeHost):
        (WebCore::CCLayerTreeHost::finishCommitOnImplThread):
        (WebCore::CCLayerTreeHost::setViewportSize):
        (WebCore::CCLayerTreeHost::updateLayers):
        (WebCore::CCLayerTreeHost::setDeviceScaleFactor): Added function to
        set deviceScaleFactor.
        (WebCore):
        * platform/graphics/chromium/cc/CCLayerTreeHost.h:
        (WebCore::CCSettings::CCSettings): Removed static deviceScaleFactor
        (CCSettings):
        (CCLayerTreeHost): Added dynamic m_deviceScaleFactor in its place.
        (WebCore::CCLayerTreeHost::deviceScaleFactor):